--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
 body {
     font-family: 'Nunito', sans-serif;
 }
+:body{
+  --color-naranja: #ed6436;
+
+}
+
+
+main img{
+  border-radius: 45px;
+  color: black;
+}
+
+
+@media (min-width: 100px) {
+  main img:hover{
+  opacity:0.7;
+  }
+}
