--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,41 @@
 body {
     font-family: 'Nunito', sans-serif;
 }
-:body{
+:root{
   --color-naranja: #ed6436;
 
 }
 
+li{
+  font-size: 24px;
+}
 
+.viewall{
+  width:205px;
+  height:85px;
+  background-color: var(--color-naranja);
+  text-align: center;
+  color: white;
+  font-size: 24px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border: 4px solid var(--color-naranja);
+}
 main img{
   border-radius: 45px;
   color: black;
 }
 
 
-@media (min-width: 100px) {
+@media (min-width: 768px) {
   main img:hover{
   opacity:0.7;
   }
+
+}
+
+.viewall:hover{
+  background-color: white;
+  color:var(--color-naranja);
 }
