--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,68 @@
-body {
-    font-family: 'Nunito', sans-serif;
-}
-:root{
-  --color-naranja: #ed6436;
+    body {
+        font-family: 'Nunito', sans-serif;
+    }
 
-}
+     :root {
+        --color-naranja: #ed6436;
+    }
 
-li{
-  font-size: 24px;
-}
+    li {
+        font-size: 24px;
+    }
 
-.viewall{
-  width:205px;
-  height:85px;
-  background-color: var(--color-naranja);
-  text-align: center;
-  color: white;
-  font-size: 24px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border: 4px solid var(--color-naranja);
-}
-main img{
-  border-radius: 45px;
-  color: black;
-}
+    .btn-viewall {
+        width: 205px;
+        height: 83px;
+        color: white;
+        font-size: 24px;
+        background-color: var(--color-naranja);
+    }
 
-h1{
-  color:var(--color-naranja);
+    main img {
+        border-radius: 45px;
+        color: black;
+    }
 
-}
-.closer{
-  font-size: 50px;
-  font-weight: 600;
-}
-@media (min-width: 768px) {
-  main img:hover{
-  opacity:0.7;
-  }
+    .cabecera {
+        padding-top: 22px;
+        padding-bottom: 22px;
+        box-shadow: 0px 4px 15px 2px rgb(0 0 0 / 10%);
+    }
 
-}
+    h1 {
+        color: var(--color-naranja);
+    }
 
-.viewall:hover{
-  background-color: white;
-  color:var(--color-naranja);
-}
+    .closer {
+        font-size: 50px;
+        font-weight: 600;
+    }
+
+    .viewall:hover {
+        background-color: white;
+        color: var(--color-naranja);
+    }
+
+    nav .links .link,
+    nav .links .link .dropdown li {
+        font-size: 18px;
+    }
+
+    nav .links .link {
+        padding-right: 45px;
+    }
+
+    nav .links .link .icono {
+        padding-left: 5px;
+    }
+
+    .btn-page {
+        border: 3px solid var(--color-naranja);
+        border-radius: 0 20px 20px 20px;
+    }
+
+    @media (min-width: 768px) {
+        main img:hover {
+            opacity: 0.7;
+        }
+    }
