--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,23 @@
         font-size: 24px;
     }
 
+    .btn-buynow:hover {
+        background-color: var(--color-naranja);
+        color: #fff;
+    }
+
     .btn-viewall {
         width: 205px;
         height: 83px;
         color: white;
         font-size: 24px;
         background-color: var(--color-naranja);
+    }
+
+    .btn-viewall:hover {
+        border: 3px solid var(--color-naranja);
+        background-color: #fff;
+        color: #000;
     }
 
     main img {
@@ -44,7 +55,7 @@
     }
 
     nav .links .link,
-    nav .links .link .dropdown li {
+    nav .links .link .dropdown-list li {
         font-size: 18px;
     }
 
@@ -52,8 +63,42 @@
         padding-right: 45px;
     }
 
+    nav .links>.link.active,
+    nav .links>.link.active .dropdown .dropdown-list li.active {
+        color: var(--color-naranja);
+    }
+
+    nav .links>.link.active::after {
+        content: '';
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100px;
+        height: 4px;
+        background-color: var(--color-naranja);
+    }
+
     nav .links .link .icono {
         padding-left: 5px;
+    }
+
+    nav .links .link .dropdown {
+        position: absolute;
+        top: 68px;
+        left: -27px;
+        min-width: 302px;
+        padding: 22px 25px;
+        background-color: #fff;
+        z-index: 1;
+        color: #000;
+    }
+
+    nav .links .link .dropdown .dropdown-list li {
+        border-bottom: 1px solid#d3d3d3;
+    }
+
+    nav .links .link .dropdown .dropdown-list li+li {
+        padding-top: 22px;
     }
 
     .btn-page {
