--- a/css/styles.css
+++ b/css/styles.css
@@ -143,14 +143,39 @@
         font-size: 18px;
     }
 
-    @media (min-width: 768px) {
-        main img:hover {
-            opacity: 0.7;
-        }
-    }
-
     @media (min-width: 992px) {
         .contenedor-principal .activities {
             justify-content: initial;
+        }
+        .activities {
+            padding-top: 70px;
+            padding-bottom: 70px;
+        }
+        .activities .activity+.activity {
+            padding-top: 0;
+        }
+        .activities .activity .img-activity {
+            filter: brightness(1);
+            transition: filter 0.5s;
+        }
+        .activities .activity:hover .img-activity {
+            filter: brightness(0.8);
+        }
+        .activities .activity .title,
+        .activities .activity .name {
+            opacity: 0;
+            transition: opacity 0.5s;
+        }
+        .activities .activity .title {
+            font-size: 17px;
+            bottom: 50%;
+        }
+        .activities .activity .name {
+            font-size: 24px;
+            bottom: 26%;
+        }
+        .activities .activity:hover .title,
+        .activities .activity:hover .name {
+            opacity: 1;
         }
     }
