Color naranja de los li del dropdown se pone cuando hacemos hover

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,9 @@
     }
 
     nav .links>.link.active,
-    nav .links>.link.active .dropdown .dropdown-list li.active {
+    nav .links>.link.active .dropdown .dropdown-list li:hover {
         color: var(--color-naranja);
+        cursor: pointer;
     }
 
     nav .links>.link.active::after {
